@@ -1,29 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
-
-<modification xmlns="http://www.simplemachines.org/xml/modification">
-	<id>el:prettyurls-extras</id>
-	<version>1.0RC</version>
-
-	<file name="$sourcedir/PrettyUrls-Filters.php">
-		<operation>
-			<search position="end"></search>
-			<add><![CDATA[
-//	Filter TP articles
-function pretty_tp_articles_filter($urls)
-{
-	global $boardurl, $scripturl;
-
-	$pattern = '`' . $scripturl . '(.*)page=([^;]+)`S';
-	$replacement = $boardurl . '/page/$2/$1';
-	foreach ($urls as $url_id => $url)
-		if (!isset($url['replacement']))
-			if (preg_match($pattern, $url['url']))
-				$urls[$url_id]['replacement'] = preg_replace($pattern, $replacement, $url['url']);
-	return $urls;
-}
-]]></add>
-		</operation>
-	</file>
-
-</modification>
