@@ -7,6 +7,7 @@ Filters installed:
 [li]A patch for the arcade mod[/li]
 [li]A redirection patch for the SEO4SMF mod[/li]
 [li]Pretty URLs for Tiny Portal's articles[/li]
+[li]Pretty URLs for SMF Tagging System tags[/li]
 [/list]
 
 [hr]
